--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-react": "^7.9.1",
     "eslint-plugin-sort-class-members": "^1.3.1",
     "eslint-plugin-unicorn": "^4.0.3",
+    "lodash": "4.17.14",
     "prettier": "^1.13.4"
   },
   "peerDependencies": {
